update the entire project